--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="quote">
         <p class="text">
             This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-            or maybe people will actually read it. Who knows? All i know is that it looks nice 
+            or maybe people will actually read it. Who knows? All i know is that it looks nice.
         </p>
         <p class="author">-Thor, God of Thunder</p>
     </section>
