--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>
         <div class="logo">Header Logo</div>
         <ul>
-            <li><a href="#information">information</a></li>
-            <li><a href="#">header link two</a></li>
+            <li><a href="#information">Information</a></li>
+            <li><a href="#quote">Quote</a></li>
             <li><a href="#">header link three</a></li>
         </ul>
     </header>
@@ -45,12 +45,24 @@
             </div>
         </div>
     </section>
-    <section class="quote">
+    <section class="quote" id="quote">
         <p class="text">
             This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
             or maybe people will actually read it. Who knows? All i know is that it looks nice.
         </p>
         <p class="author">-Thor, God of Thunder</p>
     </section>
+    <section class="call">
+        <div class="container">
+            <div class="left">
+                <h3 class="title">Call to action! it's time!</h3>
+                <p class="text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="signup">Sign up</button>
+        </div>
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
