--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="#information">Information</a></li>
             <li><a href="#quote">Quote</a></li>
-            <li><a href="#">header link three</a></li>
+            <li><a href="#call">C2A</a></li>
         </ul>
     </header>
     <section class="hero">
@@ -52,7 +52,7 @@
         </p>
         <p class="author">-Thor, God of Thunder</p>
     </section>
-    <section class="call">
+    <section class="call" id="call">
         <div class="container">
             <div class="left">
                 <h3 class="title">Call to action! it's time!</h3>
@@ -62,7 +62,7 @@
         </div>
     </section>
     <footer>
-        
+        <p class="text">Copyright &copy; The Odin Project 2021</p>
     </footer>
 </body>
 </html>
